--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve": "node variables.js && serve -l 80 -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
